--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,6 @@ jobs:
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
+      - run:
+        name: RuboCop
+        command: bundle exec rubocop
